<resources>
    <string name="app_name">Rachunki</string>
    <string name="wallets">wallets</string>
    <string name="card">card</string>
    <string name="outcome">outcome</string>
    <string name="income">income</string>
    <string name="new_income">new income</string>
    <string name="new_outcome">new outcome</string>
    <string name="new_account">new account</string>
    <string name="date">mier,30 diciembre</string>
    <string name="amount">0$</string>
    <string name="account_name">account name</string>
    <string name="income_note">income note</string>
    <string name="outcome_note">outcome note</string>
    <string name="fill_all_the_gaps">fill all the gaps</string>
    <string name="userNameKeySharedPreference">userNameKeySharedPreference</string>
    <string name="close">X</string>
</resources>
