<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:visibility="gone"
            android:id="@+id/BtnAddWallet"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle_background"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/TvWallets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="19sp"
            android:textColor="@color/primaryText"
            android:layout_marginTop="7dp"
            android:layout_marginStart="15dp"
            android:layout_alignParentTop="true"
            android:text="@string/wallets" />

        <!-- Wallets cells -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVWallets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TvWallets"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            />

        <!-- <LinearLayout
             android:id="@+id/LlWallets"
             android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/TvWallets"
             android:orientation="horizontal">

             <include layout="@layout/cell_wallet"/>
             <include layout="@layout/cell_wallet"/>
             <include layout="@layout/cell_wallet"/>

         </LinearLayout>
         -->

        <app.futured.donut.DonutProgressView
            android:id="@+id/DonutChart"
            android:layout_below="@id/RVWallets"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:donut_bgLineColor="#EAEAEA"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:donut_gapWidth="20"
            app:donut_gapAngle="270"
            app:donut_animateChanges="true"
            app:donut_animationDuration="3000"
            app:donut_strokeWidth="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_below="@id/DonutChart"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            >
            <Button
                android:id="@+id/BtnOutcome"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_buttons"
                android:textColor="@color/accentColorDestructive"
                android:text="@string/outcome"
                android:fontFamily="@font/montserrat_bold"
                android:textAllCaps="false"
                android:textSize="18sp"
                />


            <Button
                android:id="@+id/BtnIncome"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/background_buttons"
                android:textColor="@color/accentColorCreative"
                android:text="@string/income"
                android:fontFamily="@font/montserrat_bold"
                android:textAllCaps="false"
                android:textSize="18sp"
                />


        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>