<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/TvTitleAddAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_income"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/primaryText"
            android:textSize="27sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_alignParentTop="true"
            />

        <TextView
            android:id="@+id/TvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/secondaryText"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/TvTitleAddAccount"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="-5dp"
            />

        <TextView
            android:id="@+id/TvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:fontFamily="@font/montserrat_bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/TvDate"
            android:textSize="37sp"
            android:textColor="@color/accentColorCreative"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/CvEtAccountName"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_below="@id/TvAmount"
            android:layout_marginTop="20dp"
            app:cardElevation="5dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/account_name"
                    android:background="@color/blurry_background"
                    android:layout_margin="10dp"
                    android:textColorHint="@color/secondaryText"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingStart="16dp"
                    android:textSize="17sp"
                    />



            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_below="@id/CvEtAccountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="vertical"

            >
            <!-- ________________First row numbers________________-->
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <Button
                    android:id="@+id/Btn1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_number_buttons"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="1"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"

                    />

                <Button
                    android:id="@+id/Btn2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_number_buttons"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"                    android:text="2"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"
                    />

                <Button
                    android:id="@+id/Btn3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_number_buttons"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"                    android:text="3"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"
                    />



            </LinearLayout>
            <!-- ________________Second row numbers________________-->

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <Button
                    android:id="@+id/Btn4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_number_buttons"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"                    android:text="4"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"

                    />

                <Button
                    android:id="@+id/Btn5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_number_buttons"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"                    android:text="5"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"
                    />

                <Button
                    android:id="@+id/Btn6"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_number_buttons"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"                    android:text="6"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"
                    />



            </LinearLayout>
            <!-- ________________Third row numbers________________-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <Button
                    android:id="@+id/Btn7"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_number_buttons"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"                    android:text="7"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"

                    />

                <Button
                    android:id="@+id/Btn8"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_number_buttons"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"                    android:text="8"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"
                    />

                <Button
                    android:id="@+id/Btn9"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_number_buttons"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"                    android:text="9"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"
                    />



            </LinearLayout>
            <!-- ________________Fourth row numbers________________-->
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <Button
                    android:id="@+id/BtnPoint"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_number_buttons"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="."
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"

                    />

                <Button
                    android:id="@+id/Btn0"

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_number_buttons"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="0"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"
                    />

                <Button
                    android:id="@+id/BtnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_number_buttons"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="Delete"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_marginBottom="30dp"
                    />



            </LinearLayout>

        </LinearLayout>




    </RelativeLayout>
</androidx.cardview.widget.CardView>